test/core/errors/pubsub_types_error/zs/builtin_type_error.zs
package builtin_type_error;

pubsub Provider
{
    publish topic("provider/data") int32 data;
};
